  EntityGeneratorModel.getDocumentText() added
  EntityGeneratorModelTest fleshed out some
  EntityGeneratorModel improved
  AbstractFilteredTableModel.refresh() no longer resets the sorting state, simply sorts the model before returning
  ConnectionPoolImpl, Stack replaced with Deque
  EntityUiUtil.checkProperty() added, used throughout
  DefaultEntityModel.refreshDetailModelsAfterDelete() bug fix
  EntityUiUtil.NewEntityAction did not initialize the edit panel so it appeared empty
  EntityConnection.selectRows() removed
  AbstractFilteredTableModel refresh/sorting/selection functionality improved a bit
  EntityApplicationPanel.initializeUI() now adds the main entity models to the application model
  EntityGeneratorModel fixed maximumFractionDigits appearing on non-floating point data types
  EntityUiUtil.selectEntities() now handles when the dialog is closed via [x]
  EntityTablePanel, removed a few redundant constructors
  EntityUtil.getUpdatableProperties() did not anticipate read only foreign key properties :|
  ComboBoxValueLink now handles FilteredComboBoxModel with the null value selected correctly
  EntityUtil.Validator moved to Entities
  AbstractFilteredTableModel.removeItems() improved a bit
  EntityConnectionImpl.insert(), improved readability and removed repeated calls to entity.getPrimaryKey(), the reasons for which have long since disappeared into the mists of time
  EntityConnectionImpl.update(),improved readability a bit
  EntityConnectionImpl, some more prettyfication
  ProgressReporter added
  EntityDataUtil.batchInsert() added
  EntityConnectionImpl.translateValue() bug fixed, Timestamp got translated into Date
  EntityTablePanel.setAdditionalPopupControls() renamed to addPopupControls()
  EntityTablePanel.setAdditionalToolbarControls() renamed to addToolbarControls()
  EntityPanelProvider/DefaultEntityModel, tableModel.setEditModel() revised
  EntityImpl, some minor value setting refactoring