@@ -2249,3 +2249,5 @@
   EntityTablePanel.setAdditionalToolbarControls() renamed to addToolbarControls()
   EntityPanelProvider/DefaultEntityModel, tableModel.setEditModel() revised
   EntityImpl, some minor value setting refactoring
+  EntityPanel.addDetailPanel() now sets includeDetailPanelTabPane as true and adds the detail model to the underlying model
+  EntityPanelProvider.createPanel() now checks if the underlying entityModel contains models for the detail panels
